fix audio on safari

--- a/src/sass/01-components/Label.scss
+++ b/src/sass/01-components/Label.scss
@@ -35,11 +35,13 @@
 
     .inc{
       color: #FF6D00;
+      padding: 5px;
       cursor: pointer;
     }
 
     .dec{
       color: #FF6D00;
+      padding: 5px;
       cursor: pointer;
     }
   }
